; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/extr_pktcdvd.c_pkt_print_settings.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/extr_pktcdvd.c_pkt_print_settings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pktcdvd_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i64 }

@.str = private unnamed_addr constant [37 x i8] c"%s packets, %u blocks, Mode-%c disc\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"Fixed\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"Variable\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pktcdvd_device*)* @pkt_print_settings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pkt_print_settings(%struct.pktcdvd_device* %0) #0 {
  %2 = alloca %struct.pktcdvd_device*, align 8
  store %struct.pktcdvd_device* %0, %struct.pktcdvd_device** %2, align 8
  %3 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %2, align 8
  %4 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %2, align 8
  %5 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  %9 = zext i1 %8 to i64
  %10 = select i1 %8, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0)
  %11 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %2, align 8
  %12 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = ashr i32 %14, 2
  %16 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %2, align 8
  %17 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = icmp eq i32 %19, 8
  %21 = zext i1 %20 to i64
  %22 = select i1 %20, i32 49, i32 50
  %23 = trunc i32 %22 to i8
  %24 = call i32 @pkt_info(%struct.pktcdvd_device* %3, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8* %10, i32 %15, i8 signext %23)
  ret void
}

declare dso_local i32 @pkt_info(%struct.pktcdvd_device*, i8*, i8*, i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
